flux/chelseas-plate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chelseas-plate-svc
  namespace: chelseas-plate
spec:
  type: ClusterIP
  selector:
    app: chelseas-plate
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
