flux/chelseas-plate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chelseas-plate-ingress
  namespace: chelseas-plate
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  rules:
    - host: chelseas-plate.webguru.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chelseas-plate-svc
                port:
                  number: 80
